--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/chart.js": "^2.9.41",
     "appwrite": "^16.0.2",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.6",
     "dotenv": "^16.4.5",
     "gapi-client": "^0.0.3",
